@@ -46,7 +46,8 @@ void          _xdg_mime_cache_unref         (XdgMimeCache *cache);
 
 const char  *_xdg_mime_cache_get_mime_type_for_data       (const void *data,
 		 				           size_t      len);
-const char  *_xdg_mime_cache_get_mime_type_for_file       (const char *file_name);
+const char  *_xdg_mime_cache_get_mime_type_for_file       (const char  *file_name,
+							   struct stat *statbuf);
 const char  *_xdg_mime_cache_get_mime_type_from_file_name (const char *file_name);
 int          _xdg_mime_cache_is_valid_mime_type           (const char *mime_type);
 int          _xdg_mime_cache_mime_type_equal              (const char *mime_a,
